--- a/.github/workflows/sync-to-cnb.yml
+++ b/.github/workflows/sync-to-cnb.yml
@@ -3,7 +3,7 @@ name: Sync to CNB - All Branches
 on:
   push:
     branches:
-      - '**'  # 匹配所有分支
+      - '**'
 
 jobs:
   sync:
@@ -12,80 +12,54 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # 拉取所有历史和分支
+          fetch-depth: 0
 
       - name: Sync to CNB Repository
         run: |
-          # 防循环：检查最后 commit 消息是否 CI 同步
-          LAST_COMMIT_MSG=$(git log -1 --pretty=%B)
-          if [[ "$LAST_COMMIT_MSG" == "auto-sync from CNB"* ]]; then
-            echo "跳过 CI 同步循环。"
-            exit 0
-          fi
-
-          # 获取当前分支名称
           CURRENT_BRANCH_NAME="${{ github.ref_name }}"
-          echo "检查当前分支: $CURRENT_BRANCH_NAME 是否需要同步到 CNB..."
+          echo "检查分支: $CURRENT_BRANCH_NAME"
 
-          # 设置 Git 用户身份
+          # 设置 Git 用户
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-          # 添加 CNB 远程仓库（不带凭证）
+          # 添加 CNB 远程
           git remote add cnb https://cnb.cool/xiyingruyi/Stash-rules.git || git remote set-url cnb https://cnb.cool/xiyingruyi/Stash-rules.git
           git fetch cnb --no-tags
 
-          # 检查当前分支是否领先于 CNB（避免循环）
-          commits_ahead=$(git rev-list --count cnb/$CURRENT_BRANCH_NAME..$CURRENT_BRANCH_NAME 2>/dev/null || echo 0)
-          if [ $commits_ahead -eq 0 ]; then
-            echo "无变更需要同步（仓库已一致或分支不存在）。"
+          # 获取时间戳（Unix 秒）
+          GITHUB_TIME=$(git log -1 --format=%ct $CURRENT_BRANCH_NAME)
+          CNB_TIME=$(git log -1 --format=%ct cnb/$CURRENT_BRANCH_NAME 2>/dev/null || echo 0)
+
+          echo "GitHub last commit time: $GITHUB_TIME"
+          echo "CNB last commit time: $CNB_TIME"
+
+          # 如果 GitHub 不新，skip
+          if [ $GITHUB_TIME -le $CNB_TIME ]; then
+            echo "CNB 更新或一致，跳过推送。"
             exit 0
           fi
 
-          echo "当前分支领先 $commits_ahead 个 commits，正在同步到 CNB..."
+          echo "GitHub 新，推送 $((GITHUB_TIME - CNB_TIME)) 秒的变更到 CNB..."
 
-          # 安全注入 CNB token
+          # 注入 token
           if [ -z "${{ secrets.CNB }}" ]; then
-            echo "错误: CNB token 未设置！请在 GitHub Secrets 中添加 CNB。"
+            echo "错误: CNB token 未设置！"
             exit 1
           fi
           git config --global url."https://xiyingruyi:${{ secrets.CNB }}@cnb.cool/".insteadOf "https://cnb.cool/"
 
-          # 合并 CNB 远程变更（防 non-fast-forward + 冲突处理）
-          echo "合并远程变更以确保 fast-forward..."
-          if ! git merge-base --is-ancestor cnb/$CURRENT_BRANCH_NAME $CURRENT_BRANCH_NAME; then
-            echo "尝试 rebase..."
-            if ! git pull cnb $CURRENT_BRANCH_NAME --rebase --no-edit; then
-              echo "Rebase 冲突，fallback 到 merge（处理分歧如 nodes.txt）..."
-              if ! git pull cnb $CURRENT_BRANCH_NAME --no-edit; then  # merge fallback
-                echo "Merge 也失败：严重冲突需手动解决（e.g., nodes.txt 删除/更新不一致）。"
-                exit 1
-              fi
-              echo "远程变更已 merge 整合。"
-            else
-              echo "远程变更已 rebase 整合。"
-            fi
-          else
-            echo "本地已是最新的，无需 pull。"
-          fi
+          # 直接 push（无 rebase，简单）
+          git push cnb $CURRENT_BRANCH_NAME
 
-          # 重新检查领先 commits（合并后）
-          commits_ahead=$(git rev-list --count cnb/$CURRENT_BRANCH_NAME..$CURRENT_BRANCH_NAME 2>/dev/null || echo 0)
-          if [ $commits_ahead -eq 0 ]; then
-            echo "合并后无变更需要同步。"
-            exit 0
-          fi
-
-          # 执行推送（--force-with-lease 安全）
-          git push cnb $CURRENT_BRANCH_NAME --force-with-lease
           if [ $? -eq 0 ]; then
-            echo "同步到 CNB 成功！"
+            echo "同步成功！"
           else
-            echo "同步失败！"
+            echo "推送失败！"
             exit 1
           fi
 
-          # 清理临时 Git 配置
+          # 清理
           git config --global --unset url."https://xiyingruyi:${{ secrets.CNB }}@cnb.cool/".insteadOf
         env:
-          CNB_TOKEN: ${{ secrets.CNB }}  # 可选调试
+          CNB_TOKEN: ${{ secrets.CNB }}
