--- a/.cnb.yml
+++ b/.cnb.yml
@@ -1,62 +1,87 @@
-main:
-  push:
-    - services:
-        - docker
-      imports:
-        - https://cnb.cool/xiyingruyi/Secrets/-/blob/main/env.yml
-      stages:
-        - name: Git Push to GitHub
-          image: ubuntu:latest  # 使用通用镜像
-          environment:
-            - GIT_ACCESS_TOKEN
-            - GIT_USERNAME
-          script: |
-            echo "Pipeline 开始执行，采用原生 Git 推送..."
-            
-            # 1. 密钥检查
-            if [ -z "$GIT_ACCESS_TOKEN" ]; then echo "错误: GIT_ACCESS_TOKEN 未设置！"; exit 1; fi
-            if [ -z "$GIT_USERNAME" ]; then GIT_USERNAME="xiyingruyi"; fi
-            
-            # 2. 安装 Git 和所需工具
-            apt update
-            apt install -y git
-            
-            # 3. 配置 Git 用户信息
-            git config --global user.email "ci-bot@cnb.cool"
-            git config --global user.name "$GIT_USERNAME"
-            
-            # 4. 动态获取当前分支
-            CURRENT_BRANCH=$(git branch --show-current)
-            echo "当前分支: $CURRENT_BRANCH"
+push:
+  - branches:
+      - main        # 主分支
+      - jsDelivr    # 第二个分支
+    services:
+      - docker
+    imports:
+      - https://cnb.cool/xiyingruyi/Secrets/-/blob/main/env.yml  # 您的密钥仓库（修复 404 后生效）
+    stages:
+      - name: Git Push to GitHub
+        image: ubuntu:latest
+        environment:
+          - GIT_ACCESS_TOKEN
+          - GIT_USERNAME
+        script: |
+          echo "Pipeline 开始执行（分支: $CURRENT_BRANCH）..."
+          
+          # 1. 密钥检查
+          if [ -z "$GIT_ACCESS_TOKEN" ]; then 
+            echo "错误: GIT_ACCESS_TOKEN 未设置！"; 
+            exit 1; 
+          fi
+          if [ -z "$GIT_USERNAME" ]; then GIT_USERNAME="xiyingruyi"; fi
+          echo "密钥检查通过。"
+          
+          # 2. 安装 Git
+          apt update && apt install -y git
+          
+          # 3. 配置 Git 用户
+          git config --global user.email "ci-bot@cnb.cool"
+          git config --global user.name "$GIT_USERNAME"
+          
+          # 4. 当前分支
+          CURRENT_BRANCH=$(git branch --show-current)
+          echo "当前分支: $CURRENT_BRANCH"
 
-            # 5. 避免无限循环的逻辑 (必须)
-            # a. 配置远程仓库URL (使用 token 认证)
-            REMOTE_URL="https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@github.com/xiyingruyi/Stash-rules.git"
-            
-            # b. 添加 GitHub 为新远程，并拉取信息
-            git remote add github $REMOTE_URL
-            git fetch github --no-tags
-            
-            # c. 检查当前分支是否领先于 GitHub 上的同名分支
-            COMMITS_AHEAD=$(git rev-list --count github/$CURRENT_BRANCH..$CURRENT_BRANCH 2>/dev/null || echo 0)
-            if [ $COMMITS_AHEAD -eq 0 ]; then 
-                echo "无变更需要同步（本地仓库已一致）。"; 
-                exit 0; 
-            fi
-            echo "领先 $COMMITS_AHEAD commits，正在同步到 GitHub..."
+          # 5. 远程 + fetch
+          REMOTE_URL="https://github.com/xiyingruyi/Stash-rules.git"
+          git remote add github $REMOTE_URL || git remote set-url github $REMOTE_URL
+          git fetch github --no-tags
+          
+          # 6. 防循环检查
+          LAST_COMMIT_MSG=$(git log -1 --pretty=%B)
+          if [[ "$LAST_COMMIT_MSG" == "auto-sync from GitHub"* ]]; then
+            echo "跳过循环推送。"
+            exit 0
+          fi
+          
+          # 7. commit hash 比（优化：谁新谁推）
+          CNB_HEAD=$(git rev-parse $CURRENT_BRANCH)
+          GITHUB_HEAD=$(git rev-parse github/$CURRENT_BRANCH 2>/dev/null || echo "0000000000000000000000000000000000000000")
+          
+          echo "CNB HEAD commit: $CNB_HEAD"
+          echo "GitHub HEAD commit: $GITHUB_HEAD"
 
-            # 6. 执行 Git 推送：一次性推送所有需要同步的分支
-            # 推送当前分支到 GitHub 的同名分支
-            # 如果需要同时推送到 'jsDelivr' 分支，取消下一行的注释：
-            # git push github $CURRENT_BRANCH jsDelivr
-            
-            # 如果只需要推送当前分支：
-            git push github $CURRENT_BRANCH
+          # 逻辑：如果 GitHub 是 CNB 祖先（CNB 新或分歧），则推送 CNB 到 GitHub
+          if git merge-base --is-ancestor $GITHUB_HEAD $CNB_HEAD 2>/dev/null; then
+            echo "GitHub 是 CNB 祖先，跳过（GitHub 更新）。"
+            exit 0
+          else
+            echo "CNB 新或分歧，推送变更到 GitHub..."
+          fi
 
-            if [ $? -eq 0 ]; then
-                echo "Git 推送成功！"
-            else
-                echo "Git 推送失败！"
-                exit 1
-            fi
-          timeout: 10m
+          # 8. 注入 token
+          git config --global url."https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@github.com/".insteadOf "https://github.com/"
+
+          # 9. 整合变更
+          echo "尝试 pull GitHub 变更..."
+          if git pull github $CURRENT_BRANCH; then
+            echo "Pull 成功。"
+          else
+            echo "Pull 失败，使用 force-with-lease。"
+          fi
+
+          # 10. 推送
+          git push github $CURRENT_BRANCH --force-with-lease
+
+          if [ $? -eq 0 ]; then
+            echo "推送成功！ (auto-sync from CNB)"
+          else
+            echo "推送失败！"
+            exit 1
+          fi
+          
+          # 11. 清理
+          git config --global --unset url."https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@github.com/".insteadOf
+        timeout: 10m
