--- a/.github/workflows/sync-to-cnb.yml
+++ b/.github/workflows/sync-to-cnb.yml
@@ -16,24 +16,20 @@ jobs:
 
       - name: Sync to CNB Repository
         run: |
-          # 获取当前分支名称
           CURRENT_BRANCH_NAME="${{ github.ref_name }}"
-          echo "检查当前分支: $CURRENT_BRANCH_NAME 是否需要同步到 CNB..."
+          echo "检查分支: $CURRENT_BRANCH_NAME 到 CNB..."
 
-          # 添加 CNB 远程仓库（公开仓库无需认证，私有仓库需 token）
-          git remote add cnb https://cnb.cool/xiyingruyi/Stash-rules.git
+          git remote add cnb https://cnb.cool/xiyingruyi/Stash-rules.git || true
           git fetch cnb --no-tags
 
-          # 检查当前分支是否领先于 CNB（避免循环）
           commits_ahead=$(git rev-list --count cnb/$CURRENT_BRANCH_NAME..$CURRENT_BRANCH_NAME 2>/dev/null || echo 0)
           if [ $commits_ahead -eq 0 ]; then
-            echo "无变更需要同步（仓库已一致或分支不存在）。"
+            echo "无变更，跳过（防循环）。"
             exit 0
           fi
 
-          echo "当前分支领先 $commits_ahead 个 commits，正在同步到 CNB..."
+          echo "领先 $commits_ahead commits，同步中..."
 
-          # 使用 git-sync 同步
           docker run --rm \
             -v ${{ github.workspace }}:${{ github.workspace }} \
             -w ${{ github.workspace }} \
@@ -45,3 +41,5 @@ jobs:
             -e PLUGIN_FORCE="false" \
             -e PLUGIN_PUSH_TAGS="false" \
             tencentcom/git-sync
+
+          echo "同步完成！"
